objects/Record_Colour__c.object
<CustomObject>
    <fields>
        <fullName>Colour__c</fullName>
        <defaultValue>&quot;orange&quot;</defaultValue>
        <label>Colour</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Key__c</fullName>
        <externalId>true</externalId>
        <label>Foreign Key</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sobject_Type__c</fullName>
        <label>Sobject Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Record Colour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Foreign_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Colour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Colours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>